--- a/lection03/homework/html/equaterial-triangle.html
+++ b/lection03/homework/html/equaterial-triangle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rectangle</title>
+    <title>Equaterial-triangle</title>
     <script src="../js/equaterial-triangle.js"></script>
 </head>
 <body style="font-family: monospace;">
